# char-rnn-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/RNN/: dataset.hpp  hyperparameters.hpp  optimizers.hpp  rnn_cell.hpp  softmax_layer.hpp  utils.hpp
src/: dataset.cpp  optimizers.cpp  rnn_cell.cpp  softmax_layer.cpp  utils.cpp
